# susumu_robo

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  LICENSE  README.md  package.xml  repos.txt  setup.cfg  setup.py
config/: MID360_config.json  all.rviz  diagnostic_aggregator.yaml  fast_lio_mid360.yaml  gnss.yaml  imu.rviz  laser_filter.yaml  lidar_config.rviz  livox_imu.rviz  livox_imu_ms2.rviz  nav2_params.yaml  slam.rviz  slam_toolbox_params.yaml  twist_mux_topics.yaml
doc/: camera.md  hri_memo.md  launch_graph.md  memo.md  node_topic_graph.md  opendr_memo.md  stage1_agent_design.md
gui/: create_menu_shortcut.sh  map_viewer.py  menu.desktop  menu.py  menu.sh  menu.yaml  start_gnss.sh  systemd_dashboard.py
launch/: README.md  README_launch.md  _install_for_startup.sh  _install_ros2_rai_services.sh  _launch_files_documentation.md  _systemd_services_documentation.md  _uninstall_for_startup.sh  _uninstall_ros2_rai_services.sh  agent_option.launch.py  agent_option_debug.launch.py  asr_with_vad.launch.py  asr_with_wake_word.launch.py  audio.launch.py  audio_option.launch.py  audio_option_debug.launch.py  audio_option_sim.launch.py  base.launch.py  botwheel_teleop.launch.py  bringup.launch.py  bringup_diagnostic.launch.py  bringup_diagnostic_indoor.launch.py  collision_monitor.launch.py  collision_monitor_sim.launch.py  d435i.launch.py  d435i_filter.launch.py  dummy_audio.launch.py  dummy_navsatfix.launch.py  ecef_to_enu.launch.py  foxglove_bridge.launch.py  gnss.launch.py  imu_rviz.launch.py  imu_wt901.launch.py  imu_wt901.yml  install_for_startup.sh  led.launch.py  (+63 more)
(+91 files in other folders)
