<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>susumu_robo</name>
  <version>0.0.0</version>
  <description>susumu_rob</description>
  <maintainer email="75652942+sato-susumu@users.noreply.github.com">taro</maintainer>
  <license>MIT License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>speak_ros_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>susumu_ros2_interfaces</depend>
  <depend>susumu_blinkstick_ros2</depend>
  <depend>respeaker_ros</depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
